Ingress/ingress-svc.yaml
#Having this file in folder do not affect the whole process

apiVersion: v1
kind: Namespace
metadata:
  name: NAMESPACE

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: NAMESPACE
  name: ingress-svc
  annotations:
    # use the shared ingress-nginx
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: back.alexkdevops.click
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: back
            port:
              number: 8080
  - host: front.alexkdevops.click
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: front
            port:
              number: 80              
                          
---
apiVersion: v1
kind: Service
metadata:
  namespace: NAMESPACE
  name: back
spec: 
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: api

---

apiVersion: v1
kind: Service
metadata:
  namespace: NAMESPACE
  name: front
spec: 
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: web
